no longer renaming css to min

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name=viewport content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
   <title>Dreamineering</title>
   <!-- The css is copied into www/assets/css/main.min.css by the copy task -->
-  <link rel="stylesheet" href="assets/css/main.min.css" />
+  <link rel="stylesheet" href="assets/css/main.css" />
     <!-- This script will be bundled by the browserify task into build then www/js/app.js depending on gulp environment -->
   <script src="assets/js/app.min.js"></script>
 </head>
