update with bootstrap latest

--- a/index.html
+++ b/index.html
@@ -21,12 +21,8 @@
   <div class="SlideNav-overlay" slide-menu-return="left"></div>
 
   <div class="ContentContainer SiteMain">
-    <div id="alert" class='alert' ui-view="alert"></div>
     <div id="header" classs='header' ui-view="header"></div>
-
-    <div class='Logo u-z10' slide-menu-control="left">
-      <div class='u-paddingAl' logo></div>
-    </div>
+    <div id="alert" class='alert' ui-view="alert" style="display:none"></div>
 
     <div id="main" ui-view></div>
 
